fix code background color with dark mode

--- a/_sass/_darkmode.scss
+++ b/_sass/_darkmode.scss
@@ -2,6 +2,7 @@
   background-color: var(--foreground);
   color: var(--background);
   --clr-darkmode: var(--clr-link);
+  --clr-code: var(--clr-code-dark);
 }
 
 .darkmode-moon svg {
